--- a/README
+++ b/README
@@ -57,6 +57,15 @@ no ceiling or floor (but I did have distance cueing and texture mapping). The
 drawing is based on raycasting over a BSP tree, and most time-consuming
 tasks were done directly in assembly.
 
+Name: 1995-10-firedemocpp
+Language: C++
+Description: A small demo with a realistic fire animation, written in C++.
+
+Name: 1995-10-firedemoasm
+Language: Assembly x86
+Description: A small demo with a realistic fire animation, rewritten from
+scratch in assembly, since the C++ version was too slow at the time.
+
 Name: 1995-12-graphicseditor
 Language: C++
 Description: A small graphics editor for the VGA 256 color mode. I think I
