--- a/README
+++ b/README
@@ -128,6 +128,10 @@ most accurate of its time. You may like to check the self-modifying code in
 psg.asm, and also some code written in binary on blit.asm (I was using tasm at
 the time, and it didn't have MMX support, so I had to encode it manually).
 
+Name: 1997-10-wave
+Language: C
+Description: Plays a 440Hz square wave on sound blaster using dma transfers.
+
 Name: 1997-12-psgplayer
 Language: C
 Description: Update to the old psgplayer, this time emulating the PSG using
