--- a/README
+++ b/README
@@ -176,6 +176,10 @@ Name: 2000-05-ameba
 Language: C
 Description: Artificial life simulator, to watch evolution in real time.
 
+Name: 2003-11-plasma
+Language: Assembly x86
+Description: Plasma demo using only 176 bytes.
+
 Name: 2006-08-nurikabe
 Language: C++
 Description: Nurikabe solver using human-based reasoning.
