--- a/README
+++ b/README
@@ -197,6 +197,11 @@ Description: 3D tic tac toe as a java applet. This game differs from classic
 3d tic tac toe, since it's played on a board topologically equivalent to
 a toroid.
 
+Name: 2000-04-advram
+Language: Assembly Z80
+Description: Benchmark to evaluate three methods of video blitting on MSX2
+(ADVRAM, direct V9958 access and V9958 commands).
+
 Name: 2000-05-ameba
 Language: C
 Description: Artificial life simulator, to watch evolution in real time.
