--- a/README
+++ b/README
@@ -206,6 +206,10 @@ Name: 2000-05-ameba
 Language: C
 Description: Artificial life simulator, to watch evolution in real time.
 
+Name: 2002-02-bfcompiler
+Language: BASIC
+Description: A brainfuck compiler written in 3 lines of MSX BASIC.
+
 Name: 2003-04-superopt
 Language: C
 Description: Superoptimization, uses brute force to find the minimum assembly
