--- a/README
+++ b/README
@@ -219,6 +219,11 @@ Name: 2003-11-plasma
 Language: Assembly x86
 Description: Plasma demo using only 176 bytes.
 
+Name: 2003-11-eternalflame
+Language: Assembly Z80
+Description: This is a remake of 1995-10-firedemo, this time running on MSX2
+with a binary of only 256 bytes.
+
 Name: 2004-08-modplayer
 Language: Java
 Description: MOD Player written in java.
