--- a/README
+++ b/README
@@ -228,6 +228,10 @@ Name: 2002-05-elite
 Language: Assembly Z80
 Description: 3D wireframe engine for MSX.
 
+Name: 2003-02-canyon
+Language: Assembly Z80
+Description: Vertical parallax game engine for MSX.
+
 Name: 2003-04-superopt
 Language: C
 Description: Superoptimization, uses brute force to find the minimum assembly
