--- a/README
+++ b/README
@@ -232,6 +232,10 @@ Name: 2002-05-elite
 Language: Assembly Z80
 Description: 3D wireframe engine for MSX.
 
+Name: 2002-12-jvm
+Language: C
+Description: Decodes the header of a Java .class file.
+
 Name: 2003-02-canyon
 Language: Assembly Z80
 Description: Vertical parallax game engine for MSX.
