--- a/README
+++ b/README
@@ -329,3 +329,7 @@ Description: Nurikabe solver using human-based reasoning.
 Name: 2006-12-bignumfac
 Language: C++
 Description: Bignum factorial using template metaprogramming.
+
+Name: 2008-03-roman
+Language: C
+Description: Roman numbers using preprocessor metaprogramming.
