Torto Reverso puzzle

--- a/README
+++ b/README
@@ -333,3 +333,7 @@ Description: Bignum factorial using template metaprogramming.
 Name: 2008-03-roman
 Language: C
 Description: Roman numbers using preprocessor metaprogramming.
+
+Name: 2011-05-torto
+Language: Prolog
+Description: Solution of the Torto Reverso puzzle using prolog.
