--- a/README
+++ b/README
@@ -334,6 +334,10 @@ Name: 2008-03-roman
 Language: C
 Description: Roman numbers using preprocessor metaprogramming.
 
+Name: 2009-06-cylon
+Language: VHDL
+Description: Cylon visor for the Digilent FPGA board.
+
 Name: 2010-04-zenoreduce
 Language: Python
 Description: Zeno machine emluator.
