--- a/README
+++ b/README
@@ -291,6 +291,10 @@ Name: 2004-06-ttf
 Language: Assembly Z80
 Description: True type font renderer for MSX.
 
+Name: 2004-08-boing
+Language: Assembly Z80
+Description: A remake of the Amiga demo Boing Ball to MSX1.
+
 Name: 2004-08-modplayer
 Language: Java
 Description: MOD Player written in java.
@@ -349,3 +353,7 @@ Description: Zeno machine emulator.
 Name: 2011-05-torto
 Language: Prolog
 Description: Solution of the Torto Reverso puzzle using prolog.
+
+Name: 2011-07-constexpr
+Language: C++0x
+Description: An analysis of metaprogramming techniques using C++0x.
