--- a/README
+++ b/README
@@ -253,6 +253,10 @@ Name: 2002-05-elite
 Language: Assembly Z80
 Description: 3D wireframe engine for MSX.
 
+Name: 2002-06-terramex
+Language: Assembly Z80
+Description: A demo of what Terramex would look like in screen 8.
+
 Name: 2002-12-jvm
 Language: C
 Description: Decodes the header of a Java .class file.
