--- a/README
+++ b/README
@@ -359,6 +359,10 @@ Name: 2008-03-roman
 Language: C
 Description: Roman numbers using preprocessor metaprogramming.
 
+Name: 2009-03-rakell
+Language: Haskell
+Description: Ray-tracer in Haskell.
+
 Name: 2009-06-cylon
 Language: VHDL
 Description: Cylon visor for the Digilent FPGA board.
