--- a/README
+++ b/README
@@ -274,6 +274,10 @@ Language: C
 Description: Superoptimization, uses brute force to find the minimum assembly
 code that is equivalent to a given C snippet. Generates Z80 assembly.
 
+Name: 2003-08-pangram
+Language: C
+Description: Generates pangrams in portuguese.
+
 Name: 2003-11-plasma
 Language: Assembly x86
 Description: Plasma demo using only 176 bytes.
