--- a/README
+++ b/README
@@ -238,6 +238,10 @@ Name: 1999-12-tmnt
 Language: Assembly Z80
 Description: RGB sprite engine for MSX2+ in screen 10.
 
+Name: 1999-12-joywave
+Language: Assembly Z80, C
+Description: Streams a wave to a MSX turboR using joynet.
+
 Name: 2000-01-3dtictactoe
 Language: Java
 Description: 3D tic tac toe as a java applet. This game differs from classic
