--- a/README
+++ b/README
@@ -291,6 +291,11 @@ Name: 2002-06-terramex
 Language: Assembly Z80
 Description: A demo of what Terramex would look like in screen 8.
 
+Name: 2002-08-fudebium
+Language: VHDL
+Description: A Z80 clone in VHDL. Eventually I ditched this for T80 from
+opencores.
+
 Name: 2002-09-checkers
 Language: C
 Description: An engine of checkers where the computer plays against itself.
@@ -426,5 +431,5 @@ Language: Prolog
 Description: Solution of the Torto Reverso puzzle using prolog.
 
 Name: 2011-07-constexpr
-Language: C++0x
+Language: C++0x, Python
 Description: An analysis of metaprogramming techniques using C++0x.
