--- a/README
+++ b/README
@@ -414,6 +414,11 @@ Name: 2008-03-roman
 Language: C
 Description: Roman numbers using preprocessor metaprogramming.
 
+Name: 2008-05-optimumpower
+Language: C++
+Description: Find the optimum sequence of multiplications to calculate
+integer powers, using addition chains.
+
 Name: 2009-03-rakell
 Language: Haskell
 Description: Ray-tracer in Haskell.
