--- a/README
+++ b/README
@@ -437,6 +437,10 @@ Language: C++
 Description: Monte carlo simulation for the expected value of a trial and error
 random prime number algorithm.
 
+Name: 2008-10-bookperspective
+Language: Python
+Description: Applies perspective correction on photos of book covers.
+
 Name: 2009-03-rakell
 Language: Haskell
 Description: Ray-tracer in Haskell.
