Pi using monte carlo

--- a/README
+++ b/README
@@ -437,6 +437,10 @@ Language: C++
 Description: Monte carlo simulation for the expected value of a trial and error
 random prime number algorithm.
 
+Name: 2008-06-randompi
+Language: Python
+Description: Calculates pi using a monte carlo approximation.
+
 Name: 2008-10-bookperspective
 Language: Python
 Description: Applies perspective correction on photos of book covers.
