--- a/README
+++ b/README
@@ -457,6 +457,10 @@ Name: 2010-04-zenoreduce
 Language: Python
 Description: Zeno machine emulator.
 
+Name: 2011-03-randompi
+Language: BASIC
+Description: Calculates pi using a monte carlo approximation, in ZX-81 BASIC.
+
 Name: 2011-05-torto
 Language: Prolog
 Description: Solution of the Torto Reverso puzzle using prolog.
