--- a/README
+++ b/README
@@ -483,6 +483,10 @@ Name: 2010-02-pairprogramming
 Language: C
 Description: Single-person pair programming.
 
+Name: 2010-03-cyclic
+Language: Python
+Description: Find cyclic numbers.
+
 Name: 2010-04-zenoreduce
 Language: Python
 Description: Zeno machine emulator.
