--- a/README
+++ b/README
@@ -491,6 +491,10 @@ Name: 2010-04-zenoreduce
 Language: Python
 Description: Zeno machine emulator.
 
+Name: 2010-07-bozofactoring
+Language: Python
+Description: Find prime factors of a number using the worst known method.
+
 Name: 2011-03-randompi
 Language: BASIC
 Description: Calculates pi using a monte carlo approximation, in ZX-81 BASIC.
