--- a/README
+++ b/README
@@ -495,6 +495,10 @@ Name: 2010-07-bozofactoring
 Language: Python
 Description: Find prime factors of a number using the worst known method.
 
+Name: 2010-10-archytas
+Language: Povray
+Description: Draw Archytas' solution to the Delian problem using povray.
+
 Name: 2011-03-randompi
 Language: BASIC
 Description: Calculates pi using a monte carlo approximation, in ZX-81 BASIC.
