--- a/README
+++ b/README
@@ -313,6 +313,10 @@ Name: 2002-12-jvm
 Language: C
 Description: Decodes the header of a Java .class file.
 
+Name: 2003-01-asciiart
+Language: Javascript
+Description: ASCII Art written in javascript.
+
 Name: 2003-02-canyon
 Language: Assembly Z80
 Description: Vertical parallax game engine for MSX.
